made correction in alignment of matdialog

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,12 +7,12 @@ body{
     min-height: 100%;            
 }
 
-.cdk-overlay-container {
+/* .cdk-overlay-container {
     position: fixed;
     z-index: 2000;
     top: 15%;
     left: 25%;       
-}
+} */
 
 .overlay {
     position: absolute;
@@ -24,31 +24,26 @@ body{
     background-color: rgba(0, 0, 0, 0.6);
   }
 
-.cdk-overlay-container {
-    width: 300px;
-    height: 200px;
-    /* line-height: 200px; */
-    position: fixed;
-    /* top: 40%;
-    left: 50%;
-    margin-top: -100px;
-    margin-left: -150px; 
-    background-color: #8ebf42;*/
-    border-radius: 40px;
-    text-align: center;
-    z-index: 20;
+.cdk-overlay-container {    
+    position: fixed;    
+    border-radius: 40px;    
+    z-index: 2000;  
   }
 
 .multiselect-dropdown .dropdown-btn .selected-item {
     max-width: none !important;
   }
+
 .carousel-indicators{    
     bottom: -60px !important;    
   }
 
-  .carousel-indicators li{
+  div#LatestDistributorsLeads .carousel-indicators li{
     background-color: blue;
-    height: 3px;
-    width: 5px;
-    border-radius: 50px;
+    height: 12px;    
+    border-radius: 25px !important;
+  }
+
+  .full-width-dialog .mat-dialog-container {
+    width: 750px !important;
   }
